--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,5 @@
-<h1> <%= @player_1_name %> vs. <%= @player_2_name %> </h1>
-<h1> <%= @player_2_name %>: 100HP </h1>
+<%= @game.player1.name %> vs. <%= @game.player2.name %>
+
+<%= @game.player2.name %>: <%= @game.player2.hp %>HP
+
+<a href="/attack">ATTACK</a>
