Game switches turns

--- a/views/play.erb
+++ b/views/play.erb
@@ -2,4 +2,6 @@
 
 <%= @game.player2.name %>: <%= @game.player2.hp %>HP
 
+<h1> <%= @game.current_turn.name %>'s turn </h1>
+
 <a href="/attack">ATTACK</a>
