--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,9 @@
+<% if @game.current_turn == @game.player1 %>
 <%= @game.player1.name %> attacked <%= @game.player2.name %>
+<% else %>
+<%= @game.player2.name %> attacked <%= @game.player1.name %>
+<% end %>
 
+<form action="/switch-turns" method="post">
+  <input type="submit" value="END TURN">
+</form> 
